packages/isar_community_generator/test/errors/property/unsupported_type.dart
// unsupported type

import 'package:isar_community/isar.dart';

@collection
class Model {
  Id? id;

  late Set<String>? prop;
}
